Moved DB login info to AWS Secrets Manager
Created new ReadMe file
Renamed variables
Added User REST methods passthrough
Updated Swagger
